# LlaMarker

./: .gitignore  LICENSE  README.md  file_to_pdf_converter.py  pyproject.toml  temp.py
.github/workflows/: pypi.yml
llamarker/: __init__.py  file_to_pdf_converter.py  img_processor.py  llamarker.py  llamarker_gui.py  main.py
llamarker/ParsedFiles/: PB-7.1.0-1_Beschaffung.md  PB-8.1-9_Regelung_zum_Umgang_mit_Informationen.md
llamarker/assets/: .nfs0000000064c007b100000307
llamarker/testfiles/: PB-7.1.0-1_Beschaffung.docx  PB-8.1-9_Regelung_zum_Umgang_mit_Informationen.docx
revparser/: __init__.py  file_to_pdf_converter.py  img_processor.py  rev_parser.py
revparser/utils/: post_install.py
tests/: test_file_to_pdf_converter.py
