[project]
name = "revparser"
version = "0.1.0"
description = "A universal GenAI based file parser that parses complex documents locally"
authors = [{ name = "Revan Kumar", email = "revan.dhana@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "PyPDF2>=3.0.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest", "flake8"]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
