[tool.poetry]
name = "revparser"
version = "0.1.0"
description = "A universal GenAI based parser for complex documents of all types"
authors = ["Revan Kumar Dhanasekaran (revan.dhana@gmail.com)"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pypdf2 = "^3.0.1"
pypdf = "^5.1.0"
ollama = "^0.4.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.poetry.scripts]
post_install_marker = "revparser.utils.post_install:install_marker"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
